refactor: Refactor to use first class collections
객체의 생성을 쉽게 하기 위해 Factory 클래스들 추가
일급 컬렉션인 Cars, Rounds 추가(Round도 일급 객체라 할 수 있음)
경기 진행과 결과 출력을 담당하는 RacingSimulator 추가
수정된 사항에 맞게 테스트 코드도 수정