@@ -1,56 +1,39 @@
 package racing.models;
 
-import racing.utils.RandomUtil;
+import racing.factories.RoundFactory;
 
 import java.util.ArrayList;
 import java.util.List;
 
 public class Racing {
-    final private List<Round> rounds;
-    final private List<Car> cars;
-    final private int attemptsCount;
+    final private Cars cars;
+    final private Rounds rounds;
 
-    private Racing(int attemptsCount) {
-        this.rounds = new ArrayList<>();
-        this.cars = new ArrayList<>();
-        this.attemptsCount = attemptsCount;
-    }
-
-    public Racing(int carsCount, int attemptsCount) {
-        this(attemptsCount);
-        for (int i = 0; i < carsCount; i++) {
-            cars.add(new Car());
-        }
-    }
-
-    public Racing(String[] carNames, int attemptsCount) {
-        this(attemptsCount);
-        for (String carName : carNames) {
-            cars.add(new Car(carName));
-        }
+    public Racing(Cars cars, Rounds rounds) {
+        this.cars = cars;
+        this.rounds = rounds;
     }
 
     public void runRace() {
-        tryMoveCars();
-        rounds.add(Round.createFrom(cars));
+        cars.tryMoveAll();
+        rounds.add(RoundFactory.createFrom(cars));
     }
 
-    private void tryMoveCars() {
-        for (Car car : cars) {
-            car.tryMove(() -> RandomUtil.nextInt(Car.MAX_BOUNDARY_VALUE + 1));
-        }
+    public boolean hasRun(int count) {
+        return rounds.size() < count;
     }
 
-    public boolean hasNext() {
-        return rounds.size() < attemptsCount;
-    }
-
-    public List<Round> getRounds() {
+    public Rounds getRounds() {
         return rounds;
     }
 
-    public List<Car> getWinners() {
-        return rounds.isEmpty() ? new ArrayList<>() : rounds.get(rounds.size() - 1).getLeaders();
+    public List<Car> getWinnerList() {
+        final Round lastRound = rounds.getLast();
+
+        if (lastRound == null) {
+            return new ArrayList<>();
+        }
+
+        return lastRound.getLeaderList();
     }
 }
-
